--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,10 @@
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-bankingapp.jpg" alt="layout of the banking application" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Banking App Interface Concept</h2>
                                 <p class="portfolio-text text">App</p>
@@ -80,7 +83,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-cashlesspayment.jpg" alt="phone scanning a QR code" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                           </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Cashless Payment</h2>
                                 <p class="portfolio-text text">Marketing</p>
@@ -89,7 +95,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-meditationapp.jpg" alt="laptop with phone" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Meditation App</h2>
                                 <p class="portfolio-text text">App</p>
@@ -98,7 +107,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-taxiservices.jpg" alt="car steering wheel" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                           </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Taxi Service</h2>
                                 <p class="portfolio-text text">Marketing</p>
@@ -107,7 +119,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-screenillustrations.jpg" alt="phone screen" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                           </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Screen Illustrations</h2>
                                 <p class="portfolio-text text">Design</p>
@@ -116,7 +131,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-onlinecourses.jpg" alt="girl with phone" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                           </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Online Courses</h2>
                                 <p class="portfolio-text text">Marketing</p>
@@ -125,7 +143,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-instagramstoriesconcept.jpg" alt="advertising posters" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                           </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Instagram Stories Concept</h2>
                                 <p class="portfolio-text text">Design</p>
@@ -134,7 +155,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-organicfood.jpg" alt="vegetables in bag" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                           </div>
                             <div class="text-cards">
                                 <h2 class="portfolio-subtitle title-cards">Organic Food</h2>
                                 <p class="portfolio-text text">Web Site</p>
@@ -143,7 +167,10 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-img-link link" href="">
+                            <div class="portfolio-cover-wrap">
                             <img class="portfolio-img img" src="./images/portfolio-freshcoffee.jpg" alt="cup of coffee" width="360" height="300">
+                            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                             <div class="text-cards ">
                                 <h2 class="portfolio-subtitle title-cards">Fresh Coffee</h2>
                                 <p class="portfolio-text text">Web Site</p>
