--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                         <a class="header-portfolio-menu-link header-menu-link link" href="./index.html">Studio</a>
                     </li>
                     <li class="header-portfolio-menu-item">
-                        <a class="header-portfolio-menu-link header-menu-link link" href="./portfolio.html">Portfolio</a>
+                        <a class="header-portfolio-menu-link header-menu-link link active" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="header-portfolio-menu-item">
                         <a class="header-portfolio-menu-link header-menu-link link" href="">Contacts</a>
