--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </a>
                 <ul class="header-menu-list list">
                     <li class="header-menu-item list-item">
-                        <a class="header-menu-link link" href="./index.html">Studio</a>
+                        <a class="header-menu-link link active" href="./index.html">Studio</a>
                     </li>
                     <li class="header-menu-item list-item">
                         <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
@@ -53,7 +53,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title primary-title">Effective Solutions for Your Business</h1>
-                <button class="hero-order-btn" type="button">Order Service</button>
+                <button class="hero-order-btn" data-modal-open type="button" >Order Service</button>
         </div>
         </section>
 <!-- /HERO -->
@@ -382,5 +382,16 @@
         </div>
     </footer>
 <!-- /FOOTER -->
+<!-- MODAL -->
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal" >
+        <button type="button" class="close-btn" data-modal-close>
+            <svg class="close-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+        </button>
+    </div>
+</div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
